--- a/chocolate.css
+++ b/chocolate.css
@@ -7,7 +7,7 @@ body{
 
 h1{
 	background-color: cornsilk;
-	color: black;
+	color: pink;
   padding: 20px;
 	font-family: Georgia, TImes, serif;
 	font-size: 250%;
